# weather-rag-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
src/: main.py
src/adapters/: vector_store_adapter.py  weaviate_adapter.py
src/api/: app.py
src/api/models/: weather_models.py
src/api/routes/: weather_routes.py
src/api/validators/: ask_validator.py
src/config/: config_service.py
src/controllers/: weather_controller.py
src/embeddings_providers/: azure_embedding_service.py  transformer_embedding_service.py
src/llm_providers/: azure_llm_service.py  base_llm_service.py
src/prompts/: system_prompt.py
src/services/: crawling_service.py  indexer_service.py  qa_service.py
