[tool.poetry]
name = "rag-weather-assistant"
version = "0.1.0"
description = ""
authors = ["MaximPyanin <maximpyanin@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
langchain = "^0.3.25"
weaviate-client = "^4.15.0"
langchain-weaviate = "^0.0.5"
python-dotenv = "^1.1.0"
flask = "^3.1.1"
flask-restx = "^1.3.0"
langchain-openai = "^0.3.23"
langchain-community = "^0.3.25"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
